<resources>
    <string name="app_name">WatchMyCar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_bluetooth_device_list">BluetoothDeviceList</string>
    <string name="intrusion_detected">A WatchMyCar sensor was triggered (Type: %s)</string>

    <string name="microphone_sensitivity">Sound Sensitivity</string>
    <string name="timer_delay_label">Set Delay Time</string>
    <string name="sms_label">Send SMS or Signal message alerts</string>
    <string name="sms_hint">+5551991199991,+5551919191919</string>


    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving GuideDroid.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    <string name="start_stop">Start/Stop</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="action_quit">Quit</string>
    <string name="guidedroid_preferences">Preferences</string>
    <string name="title_beep_preference">Beep</string>
    <string name="summary_beep_preference_yes_no">Use sound to warn obstacles</string>
    <string name="title_vibration_preference">Vibration</string>
    <string name="summary_vibration_preference_yes_no">Use vibration to warn obstacles</string>

    <string name="sensor_light">Ambient Light</string>
    <string name="sensor_accel">Motion (Accelerometer)</string>
    <string name="sensor_camera">Motion (Camera)</string>
    <string name="sensor_sound">Microphone</string>
    <string name="sensor_power">USB Power</string>
    <string name="sensor_bump">Bump (Accelerometer)</string>
    <string name="sensor_camera_video">Motion (Video)</string>
    <string name="sensor_unknown">Unknown</string>

    <string name="alarm_status_on">ARMED</string>
    <string name="alarm_status_off">DISARMED</string>
    <string name="countdown_time">1:00</string>
    <string name="title_countdown_time">Countdown:</string>

    <!--Preference Settings -->
    <string name="hint_number" translatable="false">+12125551212</string>
    <string name="sms_dialog_summary">Phone number(s) to send notifications to</string>
    <string name="sms_dialog_message">Enter the phone number(s) to send alert notifications to, comma separated if more than one</string>
    <string name="signal_dialog_summary">A phone number to send from using Signal</string>
    <string name="verification_dialog_summary">Tap to verify your Signal number</string>
    <string name="send_message_dialog">Enter a phone number to send a test alert notification message to</string>
    <string name="send_text_message">Test notifications...</string>
    <string name="service_address">Service Address</string>
    <string name="signal_number">Signal Number (Local)</string>
    <string name="phone_number">Notification Number(s)</string>
    <string name="pref_sensors">Sensors</string>
    <string name="pref_notifications">Notifications</string>
    <string name="pref_general">General</string>
    <string name="pref_title_delay_time">Set Delay Time</string>
    <string name="pref_title_uses_arduino">External sensors</string>
    <string name="pref_uses_arduino">Uses Arduino via Bluetooth for additional sensors</string>
    <string name="pref_title_sound_sensivity">Sound sensivity</string>
    <string name="pref_summary_sound_sensivity">Level sound to triger alarm in dB</string>
    <string name="pref_movement_sensivity">Movement Sensitivity</string>
    <string name="pref_summary_movement_sensivity">Movement sensivity to triger alarm</string>

    <string name="notification_time">Notification Time Interval</string>
    <string name="notification_time_summary">Only send notifications at configured interval</string>
    <string name="notification_time_dialog">Enter time (minutes) to limit notifications. \'0\' to send every notification.</string>
    <string name="minutes">minutes(s)</string>
    <string name="keep_watch">Keep Watch!</string>
    <string name="register_signal_desc">Enter a phone number to register with Signal, to use to send secure notifications. You can use this device\'s phone number or setup a virtual number.\n\nWARNING: If this number is already configured with a Signal app install, it will stop working there, and only work within Haven.</string>
    <string name="verify_signal">Verify Signal</string>
    <string name="enter_verification">Enter the verification code you received from the Signal registration step</string>
    <string name="verify">Verify</string>
    <string name="register">Register</string>
    <string name="save_number">Save Number</string>
    <string name="title_activity_settings2">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_delay_time_titles">
        <item>15 seconds</item>
        <item>30 seconds</item>
        <item>60 seconds</item>
        <item>90 seconds</item>
        <item>120 seconds</item>
    </string-array>
    <string-array name="pref_delay_time_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
    </string-array>

    <string-array name="pref_sound_sensivity_titles">
        <item>LOW</item>
        <item>MEDIUM</item>
        <item>HIGH</item>
    </string-array>

    <string-array name="pref_sound_sensivity_values">
        <item>LOW</item>
        <item>MEDIUM</item>
        <item>HIGH</item>
    </string-array>

    <string-array name="pref_movement_sensivity_titles">
        <item>LOW</item>
        <item>MEDIUM</item>
        <item>HIGH</item>
    </string-array>

    <string-array name="pref_movement_sensivity_values">
        <item>LOW</item>
        <item>MEDIUM</item>
        <item>HIGH</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
