<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.braintech.watchmycar.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_general">
        <extra android:name="settings" android:value="prefs_general" ></extra>
    </header>

    <header
        android:fragment="com.braintech.watchmycar.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_notifications" >
        <extra android:name="settings" android:value="prefs_notification" ></extra>
    </header>

    <header
        android:fragment="com.braintech.watchmycar.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_sensors" >
        <extra android:name="settings" android:value="prefs_sync" ></extra>
    </header>

</preference-headers>
